[2단계 - 블랙잭 베팅] 썬샷(오진택) 미션 제출합니다. (#498)
* refactor: 입력된 게스트 순서대로 결과 출력이 되도록 수정

* refactor: Player는 생성될 때 2장의 카드를 가지는 것이 기본 상태가 되도록 변경

* chore: 클래스 네이밍 수정

* chore: 메서드 네이밍 수정

* docs: 블랙잭(베팅) 구현할 기능 목록 추가

* feat: 블랙잭이 존재할 경우 승패 추가

* Revert "feat: 블랙잭이 존재할 경우 승패 추가"

This reverts commit 6cf4839611aba355a23c40a6e5b376565e2ee1ed.

* Revert "Revert "feat: 블랙잭이 존재할 경우 승패 추가""

This reverts commit 63b5d74e47890ece17ed7092c0addb5016f4f097.

* docs: 구현할 기능 목록 업데이트

* docs: 구현할 기능 목록 업데이트

* refactor: 결과 목록을 담당하는 GameOutcome 열거형에서 베팅 금액에 대한 수익까지 계산해 줄 수 있도록 변경

* feat: 각 게스트의 베팅 금액을 매칭시켜 저장하는 기능 추가

* feat: 베팅 금액 입력 및 베팅 결과 출력 기능 추가

* feat: Player 생성 시 카드 두 장만을 가지는지 검증 (생성자 변경에서 별도 검정으로 수정)

* Revert "feat: Player 생성 시 카드 두 장만을 가지는지 검증 (생성자 변경에서 별도 검정으로 수정)"

This reverts commit 6f2d943cfa502cb48ea0b7918fd5f002bb49a2d4.

* feat: 베팅 금액의 입력이 최소 1000 이상인지 확인

* refactor: 분배받은 카드들을 관리하는 주체를 Player에서 Hand라는 새로운 객체가 하도록 변경

* chore: Hand 클래스 추가에 따른 수정

* chore: 수익금을 계산하는 기능을 GameOutcome만 담당하도록 수정

* refactor: 게스트가 베팅 금액을 가지도록 수정

* chore: view 수정

- 메시지를 출력하는 것은 view에서 하도록
- 개행 관리는 view에서 하도록

* chore: 메서드 분리

* refactor: Player-Hand에 다른 Hand와 비교하여 결과를 계산하는 책임 위임

* refactor: Result가 게임결과와 수익금을 취합하는 책임을 가진다.

* chore: 코드 정렬

* docs: 구현할 기능 목록 수정

* refactor: 참가자의 이름 입력에 대해 관리하는 Names 추가

---------

Co-authored-by: 2014012606 <2014012606@hanyang.ac.kr>