@@ -3,65 +3,40 @@ package blackjackgame.domain;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static blackjackgame.domain.GameOutcome.*;
-
 public class Result {
-    private static final int BLACKJACK_MAX_SCORE = 21;
-
-    private final Map<Guest, GameOutcome> guestsResult;
-    private final Map<GameOutcome, Integer> dealerResult;
-
-    public Result(final Dealer dealer, final List<Guest> guests) {
-        this.dealerResult = initDealerResult();
-        this.guestsResult = generateGuestsResult(dealer, guests);
-        generateDealerResult();
+    public static Map<Guest, GameOutcome> getGuestsResult(final List<Guest> guests, final Dealer dealer) {
+        Map<Guest, GameOutcome> guestsResult = guests.stream()
+                .collect(Collectors.toMap(guest -> guest, guest -> guest.calculateOutcome(dealer), (guest1, guest2) -> guest1, LinkedHashMap::new));
+        return Collections.unmodifiableMap(guestsResult);
     }
 
-    private Map<GameOutcome, Integer> initDealerResult() {
+    public static Map<GameOutcome, Integer> getDealerResult(final List<Guest> guests, final Dealer dealer) {
+        Map<GameOutcome, Integer> dealerResult = initDealerResult();
+        guests.forEach(
+                guest -> {
+                    GameOutcome gameOutcome = dealer.calculateOutcome(guest);
+                    dealerResult.put(gameOutcome, dealerResult.get(gameOutcome) + 1);
+                }
+        );
+        return Collections.unmodifiableMap(dealerResult);
+    }
+
+    private static Map<GameOutcome, Integer> initDealerResult() {
         return new HashMap<>(Arrays.stream(GameOutcome.values())
-                .collect(Collectors.toMap(value -> value, value -> 0)));
+                .collect(Collectors.toMap(value -> value, ignored -> 0)));
     }
 
-    private Map<Guest, GameOutcome> generateGuestsResult(final Dealer dealer, final List<Guest> guests) {
-        int dealerScore = dealer.getScore();
-        return new HashMap<>(guests.stream()
-                .collect(Collectors.toMap(guest -> guest, guest -> judgeGuestResult(dealerScore, guest.getScore()))));
-    }
-
-    private GameOutcome judgeGuestResult(final int dealerScore, final int guestScore) {
-        if (guestScore > BLACKJACK_MAX_SCORE ||
-            (dealerScore <= BLACKJACK_MAX_SCORE && dealerScore > guestScore)) {
-            return LOSE;
+    public static Map<String, Integer> getPlayersRevenue(final List<Guest> guests, final Dealer dealer) {
+        Map<String, Integer> bettingResult = new LinkedHashMap<>();
+        int dealerRevenue = 0;
+        bettingResult.put(dealer.getName(), dealerRevenue);
+        for (Guest guest : guests) {
+            GameOutcome gameOutcome = guest.calculateOutcome(dealer);
+            int guestRevenue = gameOutcome.calculateRevenue(guest.getBettingMoney());
+            bettingResult.put(guest.getName(), guestRevenue);
+            dealerRevenue -= guestRevenue;
         }
-        if (dealerScore > BLACKJACK_MAX_SCORE || guestScore > dealerScore) {
-            return WIN;
-        }
-        return DRAW;
-    }
-
-    private void generateDealerResult() {
-        for (final GameOutcome gameOutcome : guestsResult.values()) {
-            judgeDealerResult(gameOutcome);
-        }
-    }
-
-    private void judgeDealerResult(final GameOutcome gameOutcome) {
-        if (gameOutcome == WIN) {
-            dealerResult.put(LOSE, dealerResult.get(LOSE) + 1);
-        }
-        if (gameOutcome == LOSE) {
-            dealerResult.put(WIN, dealerResult.get(WIN) + 1);
-        }
-        if (gameOutcome == DRAW) {
-            dealerResult.put(DRAW, dealerResult.get(DRAW) + 1);
-        }
-    }
-
-    public Map<Guest, GameOutcome> getGuestsResult() {
-        return Map.copyOf(guestsResult);
-    }
-
-    public Map<GameOutcome, Integer> getDealerResult() {
-        return Map.copyOf(dealerResult);
+        bettingResult.put(dealer.getName(), dealerRevenue);
+        return Collections.unmodifiableMap(bettingResult);
     }
 }
